Fine prima immagine

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--HEADER-->
     <header>
         <div class="container-header">
             <div class="top-bar">
@@ -36,6 +37,27 @@
             </div>
         </div>
     </header>
+    <!--HEADER-->
+
+
+    <!--MAIN-->
+    <main>
+        <div class="container-main">
+            <div class="container-img">
+                <img class="immagine1" src="./img/1.webp" alt="Uomo">
+                <img class="immagine2" src="./img/1b.webp" alt="Uomo2">
+                <i class="fa-solid fa-heart"></i>
+                <span class="tag-red">-50%</span>
+                <span class="tag-green">Sostenibilità</span>
+            </div>
+            <div class="text">
+                <span>Levi's</span>
+                <h4>Relaxed fit tee unisex </h4>
+                <span class="color">14,99$</span>
+                <del class="size">29,99$</del>
+            </div>
+        </div>
+    </main>
 
 </body>
 
