--- a/index.html
+++ b/index.html
@@ -49,14 +49,97 @@
                 <i class="fa-solid fa-heart"></i>
                 <span class="tag-red">-50%</span>
                 <span class="tag-green">Sostenibilità</span>
-            </div>
-            <div class="text">
+                <div class="text">
                 <span>Levi's</span>
                 <h4>Relaxed fit tee unisex </h4>
                 <span class="color">14,99$</span>
                 <del class="size">29,99$</del>
+                </div>
+            </div>
+
+
+
+
+            <div class="container-img">
+                <img class="immagine1" src="./img/2.webp" alt="Uomo">
+                <img class="immagine2" src="./img/2b.webp" alt="Uomo2">
+                <i class="fa-solid fa-heart"></i>
+                <span class="tag-red">-50%</span>
+                <div class="text">
+                <span>Levi's</span>
+                <h4>Relaxed fit tee unisex </h4>
+                <span class="color">14,99$</span>
+                <del class="size">29,99$</del>
+                </div>
+            </div>
+
+
+
+            <div class="container-img">
+                <img class="immagine1" src="./img/3.webp" alt="Uomo">
+                <img class="immagine2" src="./img/3b.webp" alt="Uomo2">
+                <i class="fa-solid fa-heart"></i>
+                <span class="tag-red">-50%</span>
+                <div class="text">
+                <span>Levi's</span>
+                <h4>Relaxed fit tee unisex </h4>
+                <span class="color">14,99$</span>
+                <del class="size">29,99$</del>
+                </div>
             </div>
         </div>
+
+        <!--BLOCCO IMMAGINI 2-->
+
+
+        <div class="container-main2">
+            <div class="container-img">
+                <img class="immagine1" src="./img/4.webp" alt="Uomo">
+                <img class="immagine2" src="./img/4b.webp" alt="Uomo2">
+                <i class="fa-solid fa-heart"></i>
+                <span class="tag-red">-50%</span>
+                <span class="tag-green">Sostenibilità</span>
+                <div class="text">
+                <span>Levi's</span>
+                <h4>Relaxed fit tee unisex </h4>
+                <span class="color">14,99$</span>
+                <del class="size">29,99$</del>
+                </div>
+            </div>
+
+
+
+
+            <div class="container-img">
+                <img class="immagine1" src="./img/5.webp" alt="Uomo">
+                <img class="immagine2" src="./img/5b.webp" alt="Uomo2">
+                <i class="fa-solid fa-heart"></i>
+                <div class="text">
+                <span>Levi's</span>
+                <h4>Relaxed fit tee unisex </h4>
+                <span class="color">14,99$</span>
+                <del class="size">29,99$</del>
+                </div>
+            </div>
+
+
+
+            <div class="container-img">
+                <img class="immagine1" src="./img/6.webp" alt="Uomo">
+                <img class="immagine2" src="./img/6b.webp" alt="Uomo2">
+                <i class="fa-solid fa-heart"></i>
+                <span class="special-green">Sostenibilità</span>
+                <div class="text">
+                <span>Levi's</span>
+                <h4>Relaxed fit tee unisex </h4>
+                <span class="color">14,99$</span>
+                <del class="size">29,99$</del>
+                </div>
+            </div>
+        </div>
+
+        
+        
     </main>
 
 </body>
